# lightsd

./: .gitignore  .gitlab-ci.yml  .gitmodules  BellOperation.cpp  BellOperation.h  CMakeLists.txt  DebugOutput.h  DevMemBuffer.cpp  DevMemBuffer.h  DuplicationOutput.h  FadingOutput.h  FrameScheduler.h  HSVUDPInputOperation.cpp  HSVUDPSink.cpp  HSVUDPSink.h  LICENSE  MemFD.cpp  MemFD.h  MemMap.cpp  MemMap.h  MqttConnection.cpp  MqttConnection.h  MqttVarStore.cpp  MqttVarStore.h  Operation.cpp  Operation.h  Output.h  README.md  RGBUDPSink.cpp  RGBUDPSink.h  RainbowOperation.cpp  RainbowOperation.h  RaindropOperation.cpp  RaindropOperation.h  RotateOperation.cpp  RotateOperation.h  SharedMemoryBuffer.cpp  SharedMemoryBuffer.h  SharedMemoryOutput.cpp  SharedMemoryOutput.h  (+36 more)
VariableStore/: BoundConcreteValueType.h  ConcreteValueType.h  InvalidVariableTypeException.cpp  InvalidVariableTypeException.h  ValueType.cpp  ValueType.h  VariableStore.cpp  VariableStore.h
net/: HSVUDPSink.h  MqttConnection.cpp  MqttConnection.h  RGBUDPSink.h
operations/: BellOperation.cpp  BellOperation.h  FadeOperation.h  GameOfLifeOperation.cpp  GameOfLifeOperation.h  HSVUDPInputOperation.cpp  HSVUDPInputOperation.h  Operation.h  RGBUDPInputOperation.cpp  RGBUDPInputOperation.h  RainbowOperation.cpp  RainbowOperation.h  RaindropOperation.cpp  RaindropOperation.h  RotateOperation.cpp  RotateOperation.h  ShadeOperation.h  SolidColorOperation.h  SplashdropOperation.cpp  SplashdropOperation.h
operations/lua/: LuaHSVBuffer.cpp  LuaHSVBuffer.h  LuaOperation.cpp  LuaOperation.h
outputs/: DevMemOutput.cpp  DevMemOutput.h  DuplicationOutput.h  FadingOutput.h  HSVUDPOutput.cpp  HSVUDPOutput.h  Output.h  SharedMemoryOutput.cpp  SharedMemoryOutput.h  UDPOutput.cpp  UDPOutput.h  UDPOutputWrapper.h  WebsocketOutput.h  WebsocketOutputWrapper.cpp  WebsocketOutputWrapper.h
outputs/spi/: SPI.cpp  SPI.h  SPIOutput.cpp  SPIOutput.h
src/: Buffer.h  DevMemBuffer.cpp  DevMemBuffer.h  FrameScheduler.cpp  FrameScheduler.h  SharedMemoryBuffer.cpp  SharedMemoryBuffer.h  WorkerThread.cpp  WorkerThread.h  algorithm.cpp  algorithm.h  config.cpp  config.h  config_output.cpp  config_output.h  config_sequence.cpp  config_sequence.h  hsv.cpp  hsv.h  main.cpp  rgb.cpp  rgb.h
src/VariableStore/: BoundConcreteValueType.h  ConcreteValueType.h  InvalidVariableTypeException.cpp  InvalidVariableTypeException.h  ValueType.cpp  ValueType.h  VariableStore.cpp  VariableStore.h
src/net/: HSVUDPSink.cpp  HSVUDPSink.h  MqttConnection.cpp  MqttConnection.h  RGBUDPSink.cpp  RGBUDPSink.h
src/operations/: BellOperation.cpp  BellOperation.h  ColorOperation.h  DoorBuzzerOperation.cpp  DoorBuzzerOperation.h  FadeOperation.h  FlashOperation.cpp  FlashOperation.h  GameOfLifeOperation.cpp  GameOfLifeOperation.h  HSVUDPInputOperation.cpp  HSVUDPInputOperation.h  KnightRider.cpp  KnightRider.h  Operation.cpp  Operation.h  RGBUDPInputOperation.cpp  RGBUDPInputOperation.h  RainbowOperation.cpp  RainbowOperation.h  RaindropOperation.cpp  RaindropOperation.h  RotateOperation.cpp  RotateOperation.h  SequenceOperation.cpp  SequenceOperation.h  ShadeOperation.h  SolidColorOperation.h  SplashdropOperation.cpp  SplashdropOperation.h
src/operations/llvm/: LLVMProgram.cpp
src/operations/lua/: LuaHSVBuffer.cpp  LuaHSVBuffer.h  LuaOperation.cpp  LuaOperation.h
src/outputs/: DevMemOutput.cpp  DevMemOutput.h  DuplicationOutput.h  FadingOutput.h  HSVUDPOutput.cpp  HSVUDPOutput.h  Output.cpp  Output.h  SharedMemoryOutput.cpp  SharedMemoryOutput.h  UDPOutput.cpp  UDPOutput.h  UDPOutputWrapper.cpp  UDPOutputWrapper.h  WebsocketOutput.h  WebsocketOutputWrapper.cpp  WebsocketOutputWrapper.h
src/outputs/spi/: SPI.h  SPIOutput.cpp  SPIOutput.h
src/utils/: JobQueue.h  MemFD.cpp  MemFD.h  MemMap.cpp  MemMap.h  WorkerPool.h  luna.h  random.h  util.cpp  util.h
utils/: MemMap.cpp  MemMap.h  luna.h  util.cpp  util.h
